@@ -134,8 +134,9 @@ public:
 private:
   ncdim_t* ncd;
 
-
+#ifdef DEFINE_OCTAVE_ALLOCATOR
   DECLARE_OCTAVE_ALLOCATOR 
+#endif
   DECLARE_OV_TYPEID_FUNCTIONS_AND_DATA
 };
 
