@@ -162,7 +162,9 @@ public:
 
 private:
 
+#ifdef DEFINE_OCTAVE_ALLOCATOR
   DECLARE_OCTAVE_ALLOCATOR 
+#endif
   DECLARE_OV_TYPEID_FUNCTIONS_AND_DATA
 };
 
