@@ -1,11 +1,12 @@
 Summary of important user-visible changes for releases of the octcdf package
 
 ===============================================================================
-octcdf-1.1.8   Release Date: 2014-xx-xx   Release Manager: Alexander Barth
+octcdf-1.1.8   Release Date: 2015-03-10   Release Manager: Alexander Barth
 ===============================================================================
 
  ** Add depreciation info. Please use the netcdf package instead (possibly in
     combination with ncarray).
+ ** Fix for compiling with octave 4.0.0-rc1
 
 ===============================================================================
 octcdf-1.1.7   Release Date: 2014-02-17   Release Manager: Alexander Barth
